--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+databank (1.0.1) unstable; urgency=low
+
+  * Added functionality for Sword deposits containing zip files
+    - Zip file is unpacked 
+	- The data in manifest.rdf is munged, if available
+
+ -- Anusha Ranganathan <anusha.ranganathan@ieee.org>  Tue, 20 Mar 2013 14:08:50 +0000
+
 databank (1.0) unstable; urgency=low
 
   * Integrated Sword Server, rather than install it as a separate package
