--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+databank (1.0.2) unstable; urgency=low
+
+  * Cleaned debian package creation and python dependencies
+  * The manifest file is returned as hash rather than text+xml for application/json
+
+ -- Anusha Ranganathan <anusha.ranganathan@ieee.org>  Fri, 10 May 2013 14:08:50 +0000
+
 databank (1.0.1) unstable; urgency=low
 
   * Added functionality for Sword deposits containing zip files
